fix dark mode sidebar displayay problem

--- a/source/stylus/_darkTheme.styl
+++ b/source/stylus/_darkTheme.styl
@@ -1,5 +1,5 @@
 @media (prefers-color-scheme: dark) {
-    .al_main_container {
+    .al_main_container, .al_sidebar_cnt {
         color: #ccc;
     }
 
